# Voltam

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.zargo  README.md  TODO.md
source/: CMakeLists.txt  CircuitEditor.cpp  CircuitEditor.h  CircuitEditorWidget.cpp  CircuitEditorWidget.h  Logger.cpp  Logger.h  Vector.h  component.h  main.cpp  physical.h  schematic.h  smartpointer.h  symbol.h
source/Circuit/: Editor.cpp  Editor.h  EditorWidget.cpp  EditorWidget.h  Node.cpp  Node.h  TwoGateNode.cpp  TwoGateNode.h
source/Geometry/: Geometry.h  Layer.h  LuaPath.h  Path.cpp  Path.h
source/attribute/: attribute.h  list.cpp  list.h
source/attributes/: attribute.h  attributes.h  unit.h
source/geometry/: bezierpath.cpp  bezierpath.h  rect.h  vector2d.h
source/geometry/bezierpath/: bezierpath.cpp  bezierpath.h  invocation.cpp  invocation.h
source/lib/: Library.cpp  Library.h  Symbol.cpp  Symbol.h  SymbolTerminal.cpp  SymbolTerminal.h
source/math/: Vector2D.h
source/misc/: smartpointer.cpp  smartpointer.h
source/symbol/: generator.cpp  generator.h  generatormanager.cpp  generatormanager.h  manager.cpp  manager.h  symbol.cpp  symbol.h
source/tests/: CMakeLists.txt  attributes.cpp
symbols/: resistor.lua
tools/library-development/: README.md
tools/library-development/projects/xcode/: .gitignore
tools/library-development/projects/xcode/library-development.xcodeproj/: project.pbxproj
tools/library-development/source/: attiny13.lua
