# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                             #
#   Voltam Tests                                                              #
#                                                                             #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

# Attributes 

add_executable(
	attributes
	tests/attributes.cpp
)
target_link_libraries(
	attributes
)
